Improving code quality

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Intro to Github Actions</h1>
 
         <div class="github-actions">
-            <img src="img/actions.png" width="450" />
+            <img alt="Github Actions" src="img/actions.png" width="450" />
         </div>
 
     </body>
